// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`has optional title 1`] = `
<Widget
  style={Object {}}
>
  <WithTheme(WidgetHeader)
    icon={[Function]}
    subject="Status"
    subjectPlacement="append"
    title="My title"
  />
  <WidgetBody
    style={Object {}}
  >
    <styled.div
      style={
        Object {
          "height": "100%",
        }
      }
    >
      <img
        src="http://domain.com/image.png"
        style={
          Object {
            "display": "none",
          }
        }
      />
      <styled.div
        style={
          Object {
            "backgroundColor": undefined,
            "backgroundImage": "url(http://domain.com/image.png)",
            "backgroundSize": "cover",
          }
        }
      >
        <styled.div
          style={
            Object {
              "backgroundColor": undefined,
              "backgroundImage": "url(http://domain.com/image.png)",
              "backgroundPosition": "center center",
              "backgroundSize": "cover",
            }
          }
        />
      </styled.div>
    </styled.div>
  </WidgetBody>
</Widget>
`;

exports[`matches with snapshot 1`] = `
<Widget
  style={Object {}}
>
  <WidgetBody
    style={Object {}}
  >
    <styled.div
      style={
        Object {
          "height": "100%",
        }
      }
    >
      <img
        src="http://domain.com/image.png"
        style={
          Object {
            "display": "none",
          }
        }
      />
      <styled.div
        style={
          Object {
            "backgroundColor": undefined,
            "backgroundImage": "url(http://domain.com/image.png)",
            "backgroundSize": "cover",
          }
        }
      >
        <styled.div
          style={
            Object {
              "backgroundColor": undefined,
              "backgroundImage": "url(http://domain.com/image.png)",
              "backgroundPosition": "center center",
              "backgroundSize": "cover",
            }
          }
        />
      </styled.div>
    </styled.div>
  </WidgetBody>
</Widget>
`;
